[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Naves/Estacion_Recarga/sprite_zonarecarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Estacion_Recarga/sprite_estacion.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estacion_Recarga/audio_recarga_estacion.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Naves/Estacion_Recarga/audio_nave_vacia.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Naves/Estacion_Recarga/EstacionRecarga.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.0
height = 118.0

[sub_resource type="CircleShape2D" id=2]
radius = 502.824

[sub_resource type="Animation" id=3]
resource_name = "activado"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1, 1.4, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 90.0, 135.0, 180.0, 225.0, 270.0, 315.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision/SpriteEstacion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 25 ) ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
z_index = 1
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
scale = Vector2( 0.7, 0.7 )
z_index = 1
texture = ExtResource( 2 )

[node name="AreaRecarga" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 1000.0
collision_layer = 0

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.76, 0.87, 1, 0.6 )
self_modulate = Color( 0.33, 0.48, 0.64, 0.63 )
scale = Vector2( 40, 40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
